Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-21925

VBucket queue_fill stats can be incorrect when performing mutation immediately after bucket creation

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • 4.6.0
    • 4.6.0
    • couchbase-bucket
    • None
    • Triaged
    • Yes

    Description

      First some background - the pydcp tests are some standalone DCP tests separate from test runner and they can be found here https://github.com/couchbaselabs/pydcp.

      The test_stream_request_cas test:

      1. creates a DCP client connection to the server
      2. sets 5 kvs
      3. calls set cas for those 5 kvs
      4. the client streams those 10 mutations
      5. close the DCP connection
      6. check that everything is persisted to disk by first verifying ep_queue_size is 0 and then ep_commit_num is greater than 0.

      This test starting with 4.6.0-3441 is failing because ep_queue_size remains at 5 in the last step.

      Note that this test is part of the full test suite and can be reproduced by doing these two commands:
      python ./pydcp -h <host ip>:8091 -b cb -x -u root -p couchbase -o test_stream_request_append
      python ./pydcp -h <host ip>:8091 -b cb -x -u root -p couchbase -o test_stream_request_cas

      The second test fails by looping forever waiting for persistence, a control/C must be done to break out of it. Also this problem is not reproducible when the second test is run in isolation, the first test must be run to trigger it.

      This problem does not exist in 4.6.0-3440

      Please let me know if there is more information that I can provide.

      Attachments

        Issue Links

          Activity

            People

              drigby Dave Rigby (Inactive)
              ericcooper Eric Cooper (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                PagerDuty